--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,18 @@
 {
-    "name" : "appClient",
+    "name" : "发现焦点",
     "appid" : "__UNI__26AFF07",
     "description" : "发现焦点APP",
-    "versionName" : "1.0.0",
-    "versionCode" : "100",
+    "versionName" : "0.9.0",
+    "versionCode" : 90,
     "transformPx" : true,
     "app-plus" : {
         /* 5+App特有相关 */
-        "modules" : {},
+        "modules" : {
+            "OAuth" : {},
+            "Share" : {},
+            "Payment" : {},
+            "Statistic" : {}
+        },
         /* 模块配置 */
         "distribute" : {
             /* 应用发布信息 */
@@ -39,13 +44,59 @@
                     "<uses-permission android:name=\"android.permission.WAKE_LOCK\"/>",
                     "<uses-permission android:name=\"android.permission.WRITE_CONTACTS\"/>",
                     "<uses-permission android:name=\"android.permission.WRITE_EXTERNAL_STORAGE\"/>",
-                    "<uses-permission android:name=\"android.permission.WRITE_SETTINGS\"/>"
+                    "<uses-permission android:name=\"android.permission.WRITE_SETTINGS\"/>",
+                    "<uses-permission android:name=\"android.permission.RECEIVE_USER_PRESENT\"/>"
                 ]
             },
-            "ios" : {},
+            "ios" : {
+                "privacyDescription" : {
+                    "NSPhotoLibraryUsageDescription" : "程序需要访问您的系统相册,是否允许?",
+                    "NSPhotoLibraryAddUsageDescription" : "程序需要保存图片至您的系统相册,是否允许?",
+                    "NSCameraUsageDescription" : "程序需要开启您的摄像头,是否允许?",
+                    "NSMicrophoneUsageDescription" : "程序需要访问您的麦克风,是否允许?",
+                    "NSLocationWhenInUseUsageDescription" : "程序运行期间需要访问您的位置,是否允许?",
+                    "NSContactsUsageDescription" : "程序需要访问您的通讯录,是否允许?",
+                    "NSAppleMusicUsageDescription" : "程序运行期间需要访问您的媒体库,是否允许?"
+                }
+            },
             /* ios打包配置 */
             "sdkConfigs" : {
-                "push" : {}
+                "push" : {},
+                "statics" : {}
+            },
+            "icons" : {
+                "ios" : {
+                    "appstore" : "/Users/lucong/Desktop/logo.png",
+                    "ipad" : {
+                        "app" : "unpackage/res/icons/76x76.png",
+                        "app@2x" : "unpackage/res/icons/152x152.png",
+                        "notification" : "unpackage/res/icons/20x20.png",
+                        "notification@2x" : "unpackage/res/icons/40x40.png",
+                        "proapp@2x" : "unpackage/res/icons/167x167.png",
+                        "settings" : "unpackage/res/icons/29x29.png",
+                        "settings@2x" : "unpackage/res/icons/58x58.png",
+                        "spotlight" : "unpackage/res/icons/40x40.png",
+                        "spotlight@2x" : "unpackage/res/icons/80x80.png"
+                    },
+                    "iphone" : {
+                        "app@2x" : "unpackage/res/icons/120x120.png",
+                        "app@3x" : "unpackage/res/icons/180x180.png",
+                        "notification@2x" : "unpackage/res/icons/40x40.png",
+                        "notification@3x" : "unpackage/res/icons/60x60.png",
+                        "settings@2x" : "unpackage/res/icons/58x58.png",
+                        "settings@3x" : "unpackage/res/icons/87x87.png",
+                        "spotlight@2x" : "unpackage/res/icons/80x80.png",
+                        "spotlight@3x" : "unpackage/res/icons/120x120.png"
+                    }
+                },
+                "android" : {
+                    "hdpi" : "unpackage/res/icons/72x72.png",
+                    "ldpi" : "unpackage/res/icons/48x48.png",
+                    "mdpi" : "unpackage/res/icons/48x48.png",
+                    "xhdpi" : "unpackage/res/icons/96x96.png",
+                    "xxhdpi" : "unpackage/res/icons/144x144.png",
+                    "xxxhdpi" : "unpackage/res/icons/192x192.png"
+                }
             }
         }
     },
@@ -56,7 +107,8 @@
         /* 小程序特有相关 */
         "appid" : "wx2e40960c5cfb7723",
         "setting" : {
-            "urlCheck" : false
+            "urlCheck" : false,
+            "es6" : true
         },
         "permission" : {}
     },
