--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name" : "发现焦点",
     "appid" : "__UNI__26AFF07",
     "description" : "发现焦点APP",
-    "versionName" : "0.9.0",
+    "versionName" : "0.9.2",
     "versionCode" : 90,
     "transformPx" : true,
     "app-plus" : {
@@ -14,7 +14,8 @@
             "Payment" : {},
             "OAuth" : {},
             "VideoPlayer" : {},
-            "LivePusher" : {}
+            "LivePusher" : {},
+            "Push" : {}
         },
         /* 模块配置 */
         "distribute" : {
@@ -64,7 +65,13 @@
             },
             /* ios打包配置 */
             "sdkConfigs" : {
-                "push" : {},
+                "push" : {
+                    "igexin" : {
+                        "appid" : "j3F91JomB6AbpkCuDefJAA",
+                        "appkey" : "akpv6EDmor8pOpBBNIMmC1",
+                        "appsecret" : "WeOHgklYJcALNyRa0W6dS5"
+                    }
+                },
                 "statics" : {},
                 "maps" : {
                     "amap" : {
